--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,12 +23,25 @@ $font-path: "../assets/fonts";
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
 
+// $colors: (
+//   primary:    #488aff,
+//   secondary:  #32db64,
+//   danger:     #f53d3d,
+//   light:      #f4f4f4,
+//   dark:       #222
+// );
+
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
+  primary:    #95a5a6,
+  secondary:  #3498db,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  favorite:   #69BB7B,
+  darkSecundary: #000000,
+  lightGreen:  #AED677,
+  lightRed:    #F16D64,
+  lightYellow: #FBE491
 );
 
 
