--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -32,8 +32,8 @@ $font-path: "../assets/fonts";
 // );
 
 $colors: (
-  primary:    #95a5a6,
-  secondary:  #3498db,
+  primary:    #3498db,
+  secondary:  #95a5a6,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
